--- a/package.json
+++ b/package.json
@@ -5,21 +5,33 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@babylonjs/core": "^4.2.0",
+    "@babylonjs/loaders": "^4.2.0",
+    "babylonjs-hook": "0.1.0-beta.0",
+    "bulma": "^0.9.3",
     "gatsby": "^3.6.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sass": "^4.7.1",
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
+    "gsap": "^3.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-babylonjs": "^3.0.17",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-gsap": "^3.2.1",
+    "react-helmet": "^6.1.0",
+    "react-scrollmagic": "^2.3.0",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
+    "@babylonjs/inspector": "^4.2.0",
     "prettier": "2.2.1"
   },
   "keywords": [
