--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "@babylonjs/core": "^4.2.0",
     "@babylonjs/loaders": "^4.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "babylonjs-hook": "0.1.0-beta.0",
     "bulma": "^0.9.3",
     "gatsby": "^3.6.2",
@@ -17,10 +21,12 @@
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sass": "^4.7.1",
-    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sharp": "^3.14.3",
     "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-source-strapi": "^2.0.0",
     "gatsby-transformer-sharp": "^3.6.0",
     "gsap": "^3.7.0",
+    "lottie-web": "^5.9.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-babylonjs": "^3.0.17",
